Projeto corrigido, adicionado estrutura de pacotes e bibliotecas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/JogoDaVelha.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.looksdemo-2.3.1.jar=src/my/jogoDaVelha/lib/looksdemo-2.3.1.jar
-file.reference.napkinlaf-alpha001.jar=src/my/jogoDaVelha/lib/napkinlaf-alpha001.jar
+file.reference.looksdemo-3.6.0.jar=C:\\Workspace\\NetBeans\\Jogo-da-velha-REDE\\src\\br\\senai\\libs\\looksdemo-3.6.0.jar
+file.reference.napkinlaf-alpha001.jar=C:\\Workspace\\NetBeans\\Jogo-da-velha-REDE\\src\\br\\senai\\libs\\napkinlaf-alpha001.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.looksdemo-2.3.1.jar}:\
+    ${file.reference.looksdemo-3.6.0.jar}:\
     ${file.reference.napkinlaf-alpha001.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=my.jogoDaVelha.jogoDaVelhaUI
+main.class=br.senai.application.jogoDaVelhaUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
